--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
 
   #--------state------------#
   get: ^4.6.6
+  http: ^1.1.0
+  intl: ^0.19.0
+  logger: ^2.5.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
