--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.5.0
   url_launcher: ^6.2.4
+  flutter_native_splash: ^2.3.7
 
 dev_dependencies:
   flutter_test:
