--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
     - assets/images/on_boarding_images/
     - assets/images/animations/
     - assets/icons/categories/
-    - assets/icons/banners/
+    - assets/images/banners/
     - assets/images/products/
 
   # An image asset can refer to one or more resolution-specific "variants", see
