--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_native_splash: ^2.3.7
   smooth_page_indicator: ^1.2.0+3
   carousel_slider: ^5.0.0
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
