--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   carousel_slider: ^5.0.0
   readmore: ^2.2.0
   flutter_rating_bar: ^4.0.1
+  firebase_core: ^2.24.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
